--- a/hugo.toml
+++ b/hugo.toml
@@ -1,3 +1,14 @@
-baseURL = 'https://example.org/'
-languageCode = 'en-us'
-title = 'My New Hugo Site'
+baseURL = "https://github.com/tonycyriac/vestifex.git/"
+
+languageCode = "en-us"
+DefaultContentLanguage = "en"
+title = "Vestifex Docs"
+theme = "hugo-theme-techdoc"
+
+
+[params]
+    # Documentation Menu section
+    # Menu style settings
+    menu_style =  "slide-menu" 
+
+  
